--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
             android:drawableStart="@drawable/baseline_lock_24"
             android:drawablePadding="8dp"
             android:fontFamily="@font/inter"
-            android:hint="@string/password"
+            android:hint="Mật khẩu"
             android:inputType="textPassword"
             android:padding="15dp"
             android:textSize="13sp" />
