--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -87,7 +87,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Nhập bình luận của bạn..."
+            android:hint="Nhập bình luận..."
             android:padding="8dp"
             android:background="@drawable/edittext_background"
             android:fontFamily="@font/inter"
